feat: add swager to method delete
